update XML